# robot-agent-tunnel

./: CLAUDE.md  README.md
.claude/skills/tunnel-verify/: SKILL.md
clients/: README.md
clients/go/roboat/: client.go
clients/python/roboat/: daemon.py
clients/python/rt_connect/: daemon.py
deploy/: README.md  bootstrap.sh  coturn.conf  io.roboat.roboatd.plist  roboatd.service  self-host-full.sh  setup.sh  tunnel.service
examples/agent-to-agent/: README.md  python_responder.py
examples/agent-to-agent/go_initiator/: go_initiator  main.go
go/cmd/tunnel-svc/: main.go  mcp_proxy.go
go/internal/config/: config.go
rust/: Cargo.toml
rust/crates/roboat-core/: Cargo.toml
rust/crates/roboat-core/src/: config.rs  ros.rs
rust/crates/roboat-daemon/: Cargo.toml
rust/crates/roboat-daemon/src/: ipc.rs  lib.rs  manager.rs  mux.rs  server.rs
rust/crates/roboat-resolver/: Cargo.toml
rust/crates/roboat-webrtc/: Cargo.toml
rust/crates/roboat-webrtc/src/: client.rs  lib.rs
rust/crates/rt-core/src/: protocol.rs
rust/crates/rt-daemon/: Cargo.toml
rust/crates/rt-daemon/src/: manager.rs  mux.rs
rust/crates/rt-resolver/: Cargo.toml
rust/crates/rt-resolver/src/: lib.rs
spec/: addressing.md  daemon-ipc.md  tunnel-protocol.md
