[package]
name = "roboat-daemon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/get-robotunnel/roboat"
description = "roboat daemon — exposes tunnel connectivity via local IPC socket"

[dependencies]
roboat-core = { path = "../roboat-core" }
roboat-resolver = { path = "../roboat-resolver" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
