[package]
name = "roboat-resolver"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/get-robotunnel/roboat"
description = "roboat registry resolver — maps agent_id to tunnel endpoint and sends heartbeats"

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
thiserror = "2"
tracing = "0.1"
